# bdk-flutter

./: .gitignore  .metadata  .pubignore  CHANGELOG.md  README.md  analysis_options.yaml  cargokit_options.yaml  check_precompiled.sh  config.sh  flutter_rust_bridge.yaml  lefthook.yml  makefile  pubspec.yaml
.githooks/: pre-commit  pre-push.sh
.github/workflows/: precompile_binaries.yml
android/: CMakeLists.txt  build.gradle  gradle.properties  settings.gradle
assets/: config.json  release.config.txt
darwin/: bdk_flutter.podspec
darwin/Classes/: BdkFlutterPlugin.swift  bindings.h
example/: .gitignore  README.md  pubspec.yaml
example/android/: settings.gradle
example/integration_test/: full_cycle_test.dart  multi_sig_test.dart  plugin_integration_test.dart
example/integration_test /: full_cycle_test.dart  multi_sig_test.dart
example/lib/: bdk_library.dart  main.dart  multi_sig_wallet.dart  repository.dart  simple_wallet.dart  tradeview.dart  wallet.dart
ios/: .gitignore  bdk_flutter.podspec  flutter_bdk.podspec
lib/: bdk_flutter.dart  bdk_flutter_method_channel.dart  bdk_flutter_platform_interface.dart  bridge_generated.dart  flutter_bdk.dart  flutter_bdk_method_channel.dart  flutter_bdk_platform_interface.dart
macos/: bdk_flutter.podspec  flutter_bdk.podspec
rust/: .gitignore  Cargo.toml  android.sh  build.rs  build.sh  build_macOs.sh  build_macos.sh  cargokit.yaml  compress.sh  config.txt  config_binary.sh  copy.sh  darwin.sh  log.txt  makefile  unittest.sh  unzip.sh  zip.sh
rust/src/: api.rs  bdk.rs  blockchain.rs  bridge_generated.io.rs  bridge_generated.rs  bridge_generated.web.rs  descriptor.rs  error.rs  ffi.rs  frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs  key.rs  lib.rs  psbt.rs  r_api.rs  types.rs  utils.rs  wallet.rs
rust/src/api/: bitcoin.rs  blockchain.rs  descriptor.rs  electrum.rs  error.rs  esplora.rs  key.rs  mod.rs  psbt.rs  store.rs  tx_builder.rs  types.rs  wallet.rs  wallet_base.rs
rust/src/util/: error.rs
test/: bdk_flutter_method_channel_test.dart  bdk_flutter_test.dart  bdk_flutter_test.mocks.dart  bdk_flutter_unit_tests.dart  flutter_bdk_method_channel_test.dart  flutter_bdk_test.dart
(+93 files in other folders)
