[package]
name = "bdk_flutter"
version = "1.0.0-alpha.11"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]
[dev-dependencies]
assert_matches = "1.5"
anyhow = "1.0.68"
[dependencies]
flutter_rust_bridge = "=2.0.0"
bdk_core = { version = "= 0.1.0" }
bdk_wallet = { version = "1.0.0-beta.4", features = ["all-keys", "keys-bip39", "rusqlite"] }
bdk_esplora = { version = "0.18.0", default-features = false, features = ["std", "blocking", "blocking-https-rustls"] }
bdk_electrum = { version = "0.18.0", default-features = false, features = ["use-rustls-ring"] }
bdk_bitcoind_rpc = { version = "0.15.0" }
bitcoin-internals = { version = "= 0.2.0", features = ["alloc"] }
serde = "1.0.89"
serde_json = "1.0.96"
anyhow = "1.0.68"
thiserror = "1.0.63"
tokio = {version = "1.40.0", default-features = false, features = ["rt"]}
lazy_static = "1.5.0"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"


