[package]
name = "bdk_flutter"
version = "0.31.3"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]
[dev-dependencies]
assert_matches = "1.5"
anyhow = "1.0.68"
[dependencies]
flutter_rust_bridge = "=2.9.0"
rand = "0.8"
bdk = { version = "0.29.0", features = [
    "all-keys",
    "use-esplora-ureq",
    "sqlite-bundled",
    "rpc",
] }
serde = "1.0.89"
serde_json = "1.0.96"
anyhow = "1.0.68"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
